@@ -7,15 +7,15 @@
 						Username:&nbsp;
 					</td>
 					<td width="1">
-						<select name="cbo_username" onChange="window.location=document.form_userlog.cbo_username.options[document.form_userlog.cbo_username.selectedIndex].value">
-							<option value="utilities.php?action=view_user_log&username=-1"<?php if ($_REQUEST["username"] == "-1") {?> selected<?php }?>>All</option>
-							<option value="utilities.php?action=view_user_log&username=-2"<?php if ($_REQUEST["username"] == "-2") {?> selected<?php }?>>Deleted/Invalid</option>
+						<select name="username" onChange="applyViewLogFilterChange(document.form_userlog)">
+							<option value="-1"<?php if ($_REQUEST["username"] == "-1") {?> selected<?php }?>>All</option>
+							<option value="-2"<?php if ($_REQUEST["username"] == "-2") {?> selected<?php }?>>Deleted/Invalid</option>
 							<?php
 							$users = db_fetch_assoc("SELECT DISTINCT username FROM user_auth ORDER BY username");
 
 							if (sizeof($users) > 0) {
 							foreach ($users as $user) {
-								print "<option value='utilities.php?action=view_user_log&username=" . $user["username"] . "&page=1'"; if ($_REQUEST["username"] == $user["username"]) { print " selected"; } print ">" . $user["username"] . "</option>\n";
+								print "<option value='" . $user["username"] . "'"; if ($_REQUEST["username"] == $user["username"]) { print " selected"; } print ">" . $user["username"] . "</option>\n";
 							}
 							}
 							?>
@@ -26,10 +26,10 @@
 						Result:&nbsp;
 					</td>
 					<td width="1">
-						<select name="cbo_result" onChange="window.location=document.form_userlog.cbo_result.options[document.form_userlog.cbo_result.selectedIndex].value">
-							<option value="utilities.php?action=view_user_log&result=-1"<?php if ($_REQUEST['result'] == '-1') {?> selected<?php }?>>Any</option>
-							<option value="utilities.php?action=view_user_log&result=1"<?php if ($_REQUEST['result'] == '1') {?> selected<?php }?>>Success</option>
-							<option value="utilities.php?action=view_user_log&result=0"<?php if ($_REQUEST['result'] == '0') {?> selected<?php }?>>Failed</option>
+						<select name="result" onChange="applyViewLogFilterChange(document.form_userlog)">
+							<option value="-1"<?php if ($_REQUEST['result'] == '-1') {?> selected<?php }?>>Any</option>
+							<option value="1"<?php if ($_REQUEST['result'] == '1') {?> selected<?php }?>>Success</option>
+							<option value="0"<?php if ($_REQUEST['result'] == '0') {?> selected<?php }?>>Failed</option>
 						</select>
 					</td>
 					<td width="5"></td>
@@ -48,5 +48,6 @@
 			</table>
 		</td>
 		<input type='hidden' name='page' value='1'>
+		<input type='hidden' name='action' value='view_user_log'>
 		</form>
 	</tr>
